# ChangeLog of Nadoka($Rev$)
# $Id$ 

2006-10-20(Fri) 22:22:07 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* ndk/bot.rb : new method ccn2rcn


2006-10-07(Sat) 03:52:11 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugin/tenkibot.nb : added


2006-10-02(Mon) 21:58:40 +0900  Koichi Sasada  <ko1@atdot.net>

	* 0.7.0 : released

	* ndk/version.rb : 0.7.1


2006-10-02(Mon) 21:41:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weatherbot.nb : removed

	* plugins/sendpingbot.nb : added

	* ndk/client.rb : modified for pingbot

	* ndk/server.rb : ditto


2006-09-01(Fri) 02:04:15 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* ndk/bot.rb : support send to a safe channel

	* nadokarc : fix misalignment


2006-08-31(Thu) 01:40:39 +0900  Kazuhiro NISHIAYMA <zn@mbf.nifty.com>

	* ndk/bot.rb : fix typos


2006-08-11(Fri) 14:45:01 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/gonzuibot.nb : add a comma

	* plugins/pastebot.nb : add nick to paste page name

	* plugins/googlebot.nb : fix show_char_code_and_erace_tag


2006-05-16(Tue) 16:16:30 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb : handle TERM signal
 

2006-03-27(Mon) 19:50:27 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/dictbot.nb : fix dict index

	* plugins/roulettebot.nb : added

	* rice/irc.rb : loosen nick regexp

	* ndk/server.rb : randomize server if serching next server


2005-09-30(Fri) 00:05:19 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix bugs

	* plugins/dictbot.nb : support

	* plugins/gonzuibot.nb : added

	* ndk/config.rb : fix bugs


2005-06-25(Sat) 19:02:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadoka.rb : output error information  to file
	'nadoka_fatal_error' when unhandled error is occure (bug)


2005-06-14(Tue) 21:26:07 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/server.rb : change reloaded message output method to slog


2005-06-13(Mon) 18:25:33 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc, ndk/logger.rb, ndk/config.rb : support